1.1.2
-----
1. If restarting server (e.g. after updating plugins) then reload page after 2.5
   seconds.

1.1.1
-----
 1. Fix menu icon missing from grid items.
 2. If keyboard shortcuts are disabled, dont prevent the event from propagating.
 3. Use Alt+Arrow instead of just Arrow for shortcuts.
 4. When remapping icons, check object icon/icon-id property is a string.
 5. Fix broken expand now-playing button in desktop layout.
 6. Fix updating queue when remove a selection of tracks.
 7. Place 'Server settings' back into main menu.
 8. Fix missing shortcuts from some queue action tooltips.
 9. Mark icon buttons as non-selectable to try and prevent copy dialog on
    mobile.
10. Tweaks to classic skin used for settings, etc.
11. Set focus each time a dialog is shown.
12. Customise shortcut text (Ctrl/Command) depending upon whether OS is Mac or
    not.

1.1.0
-----
 1. Swipe up/down in now-playing to change volume.
 2. Show desktop style volume control in mobile view if width is 900px or more.
 3. Search for podcasts via iTunes or GPodder, and add to podcast subscriptions.
 4. Add action to remove podcasts.
 5. Add action to add podcast via URL.
 6. Add configuration of browse-modes to player settings.
 7. When creating, or editing, a group, set browse modes to the enabled modes
    from all members.
 8. List all active plugins in 'Information' dialog.
 9. Add updating of plugins to 'Information' dialog.
10. Remove 'Server settings' from main menu, make accessible from 'Information'
    dialog.
11. Check for plugin updates 1/2 second after connecting to server, and every
    30 minutes thereafter.
12. Replace main menu icon with green arrow icon to indicate updates available.
13. Auto-scroll 'Information' dialog to plugins section if there are updates
    available when it is opened.
14. Add option to use 3 lines for queue items (title, artist, album).
15. Show server settings, and advanced player settings, from 'Classic' skin and
    placed within an iframe.